--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   modal_bottom_sheet: ^2.0.0
   fl_chart: ^0.40.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
