--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   modal_bottom_sheet: ^2.0.0
   fl_chart: ^0.40.0
   http: ^0.13.3
+  vertical_card_pager: ^1.5.0
 
 dev_dependencies:
   flutter_test:
